--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^0.5.3+2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -33,8 +34,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: any
-  shared_preferences: any
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
