--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,18 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^0.5.3+2
+  flutter_ble_lib: ^2.2.3
+  permission_handler: ^5.0.0+hotfix.3
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.12.0+1
+  flutter_blue: ^0.6.3+1
+  latlong: ^0.6.1
+  geolocator: ^6.2.1
+  # flutter_bluetooth_serial: ^0.2.2
 
 dev_dependencies:
   flutter_test:
