--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_blue: ^0.6.3+1
   latlong: ^0.6.1
   geolocator: ^6.2.1
+  bloc: ^8.0.3
   # flutter_bluetooth_serial: ^0.2.2
 
 dev_dependencies:
@@ -58,7 +59,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - images/mongsil.png
+    - assets/images/mongsil.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
